--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="main">
 			<h1 class="main">cipherJS</h1>
-				<h2 class="main"><a class="main" href="" target="_blank">View on Github</a></h2>
+				<h2 class="main"><a class="main" href="http://github.com/snowcrystal/cipherjs/" target="_blank">View on Github</a></h2>
 			<p class="main">
 				cipherJS is a cryptographic library written in Javascript and
 				made for HTML5 apps and add-ons.
